--- a/style.css
+++ b/style.css
@@ -32,12 +32,15 @@ body {
     width: 250px;
     height: 450px;
     box-shadow: 0 5px 10px 0;
-    /* border: 2px solid #ccc; */
-    border-radius: 0 0px 0 50px;
+    /* border-radius: 0 50px 0 50px; */
     padding: 15px;
     background-color: rgb(105, 103, 103);
     margin: 10px;
 
+}
+
+img {
+    /* border-radius: 0 50px 0 0; */
 }
 
 .container__child-cards p:hover {
@@ -46,14 +49,33 @@ body {
 
 #luffy-card:hover {
     background: linear-gradient(90deg, rgba(71,39,2,1) 0%, rgba(228,58,20,1) 0%, rgba(255,154,0,1) 86%);
+    cursor: pointer;
+    border-radius: 0 50px 0 50px;
+    
+}
+
+#luffy-card:hover img {
+    border-radius: 0 50px 0 0;
 }
 
 #sanji-card:hover {
     background: linear-gradient(90deg, rgb(233, 202, 64) 6%, rgb(212, 202, 10) 41%, rgb(153, 212, 94) 100%);
+    cursor: pointer;
+    border-radius: 0 50px 0 50px;
+}
+
+#sanji-card:hover img {
+    border-radius: 0 50px 0 0;
 }
 
 #zoro-card:hover {
     background: linear-gradient(90deg, rgba(174,240,106,1) 0%, rgba(160,208,25,1) 44%, rgba(22,208,11,1) 100%, rgba(205,131,11,1) 100%);
+    cursor: pointer;
+    border-radius: 0 50px 0 50px;
+}
+
+#zoro-card:hover img {
+    border-radius: 0 50px 0 0;
 }
 
 .container__child--wrapper {
@@ -106,6 +128,7 @@ body {
     border: none;
     color: #fff;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .btn-primary {
