--- a/style.css
+++ b/style.css
@@ -58,6 +58,11 @@ img {
     border-radius: 0 50px 0 0;
 }
 
+#luffy-card:hover p {
+    color: #000;
+    font-weight: bold;
+}
+
 #sanji-card:hover {
     background: linear-gradient(90deg, rgb(233, 202, 64) 6%, rgb(212, 202, 10) 41%, rgb(153, 212, 94) 100%);
     cursor: pointer;
@@ -68,6 +73,11 @@ img {
     border-radius: 0 50px 0 0;
 }
 
+#sanji-card:hover p {
+    color: #000;
+    font-weight: bold;
+}
+
 #zoro-card:hover {
     background: linear-gradient(90deg, rgba(174,240,106,1) 0%, rgba(160,208,25,1) 44%, rgba(22,208,11,1) 100%, rgba(205,131,11,1) 100%);
     cursor: pointer;
@@ -76,6 +86,11 @@ img {
 
 #zoro-card:hover img {
     border-radius: 0 50px 0 0;
+}
+
+#zoro-card:hover p {
+    color: #000;
+    font-weight: bold;
 }
 
 .container__child--wrapper {
