--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400&family=Roboto:ital,wght@0,100;0,400;1,300&display=swap');
 body {
-    background: linear-gradient(90deg, red 0%, orange 25%, yellow 50%, green 75%, blue 100%);
+    background: linear-gradient(90deg, rgb(255, 0, 0) 0%, rgb(255, 165, 0) 25%, rgb(255, 255, 0) 50%, rgb(0, 128, 0) 75%, rgb(0, 0, 255) 100%);
 }
 
 .container {
@@ -25,7 +25,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-flow: row nowrap;
-    background-color: rgb(233, 223, 223);
+    /* background-color: rgb(233, 223, 223); */
     max-width: 900px;
 
 }
@@ -42,7 +42,7 @@ body {
     box-shadow: 0 5px 10px 0;
     /* border-radius: 0 50px 0 50px; */
     padding: 15px;
-    background-color: rgb(105, 103, 103);
+    background-color: rgb(170, 144, 73);
     margin: 10px;
 
 }
