--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400&family=Roboto:ital,wght@0,100;0,400;1,300&display=swap');
 body {
-    background: linear-gradient(90deg, rgb(255, 0, 0) 0%, rgb(255, 165, 0) 25%, rgb(255, 255, 0) 50%, rgb(0, 128, 0) 75%, rgb(0, 0, 255) 100%);
+    background: linear-gradient(90deg, rgb(255, 0, 0) 0%, rgb(255, 165, 0) 33.33%, rgb(255, 255, 0) 66.66%, rgb(0, 128, 0) 100%);
 }
 
 .container {
